# zero2prod_

./: Cargo.toml  configuration.yaml
.github/workflows/: audit-on-push.yaml  general.yaml  scheduled-audit.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
